- dodanie kategorii dla przychodu, - dodanie obsługi dla grup i wspólnych kategorii
