# budgetFlow-ui/src/app/services/api.module.ts
@@ -9,6 +9,7 @@ import { ApiConfiguration, ApiConfigurationParams } from './api-configuration';
 import { GroupService } from './services/group.service';
 import { ExpenseService } from './services/expense.service';
 import { IncomeService } from './services/income.service';
+import { IncomeCategoryService } from './services/income-category.service';
 import { ExpensesCategoryService } from './services/expenses-category.service';
 import { UsersService } from './services/users.service';
 import { AuthenticationService } from './services/authentication.service';
@@ -24,6 +25,7 @@ import { AuthenticationService } from './services/authentication.service';
     GroupService,
     ExpenseService,
     IncomeService,
+    IncomeCategoryService,
     ExpensesCategoryService,
     UsersService,
     AuthenticationService,
