# budgetFlow-ui/src/app/services/models.ts
@@ -6,6 +6,7 @@ export { AuthenticationRequest } from './models/authentication-request';
 export { AuthenticationResponse } from './models/authentication-response';
 export { ExpenseCategory } from './models/expense-category';
 export { ExpenseCategoryRequest } from './models/expense-category-request';
+export { ExpenseCategoryResponse } from './models/expense-category-response';
 export { ExpenseRequest } from './models/expense-request';
 export { ExpenseResponse } from './models/expense-response';
 export { ExpenseResponseForStatistics } from './models/expense-response-for-statistics';
@@ -13,6 +14,9 @@ export { GroupInviteRequest } from './models/group-invite-request';
 export { GroupRequest } from './models/group-request';
 export { GroupResponseForExpenseService } from './models/group-response-for-expense-service';
 export { GroupResponseWithUser } from './models/group-response-with-user';
+export { IncomeCategory } from './models/income-category';
+export { IncomeCategoryRequest } from './models/income-category-request';
+export { IncomeCategoryResponse } from './models/income-category-response';
 export { IncomeRequest } from './models/income-request';
 export { IncomeResponse } from './models/income-response';
 export { RegistrationRequest } from './models/registration-request';
