# budgetFlow-ui/src/app/services/models/expense-category-response.ts
@@ -2,9 +2,8 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-export interface ExpenseCategory {
+export interface ExpenseCategoryResponse {
   createdByUserId?: number;
   id?: number;
   name?: string;
-  sharedWithUsers?: Array<number>;
 }
