# budgetFlow-ui/src/app/services/models/income-category-request.ts
@@ -2,9 +2,7 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-export interface ExpenseCategory {
-  createdByUserId?: number;
+export interface IncomeCategoryRequest {
   id?: number;
   name?: string;
-  sharedWithUsers?: Array<number>;
 }
