# budgetFlow-ui/src/app/services/models/income-request.ts
@@ -2,9 +2,11 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+import { IncomeCategory } from '../models/income-category';
 export interface IncomeRequest {
   amount?: number;
   id?: number;
+  incomeCategory?: IncomeCategory;
   incomeDate?: string;
   name?: string;
 }
