# expenses-service/src/main/java/pl/tkaczyk/expensesservice/controller/IncomeCategoryController.java
@@ -1,5 +1,6 @@
 package pl.tkaczyk.expensesservice.controller;
 
+import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.MediaType;
@@ -20,18 +21,20 @@ public class IncomeCategoryController {
     private final IncomeCategoryService service;
 
     @GetMapping(value = "/getAllIncomeCategories", produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<List<IncomeCategoryResponse>> getAllIncomeCategories() {
-        return ResponseEntity.ok(service.getAllIncomeCategories());
+    public ResponseEntity<List<IncomeCategoryResponse>> getAllIncomeCategories(@Parameter(hidden = true) @RequestHeader("X-User-Id") String activeUserId) {
+        return ResponseEntity.ok(service.findAllIncomeCategories(activeUserId));
     }
 
     @DeleteMapping(value = "/{incomeCategoryId}", produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<Void> deleteIncomeCategory(@PathVariable Long incomeCategoryId) {
-        service.deleteIncomeCategory(incomeCategoryId);
+    public ResponseEntity<Void> deleteIncomeCategory(@PathVariable Long incomeCategoryId,
+                                                     @Parameter(hidden = true) @RequestHeader("X-User-Id") String activeUserId) {
+        service.deleteIncomeCategory(incomeCategoryId, activeUserId);
         return ResponseEntity.noContent().build();
     }
 
     @PostMapping(produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<IncomeCategoryResponse> createIncomeCategory(@RequestBody IncomeCategoryRequest request) {
-        return ResponseEntity.ok(service.saveIncomeCategory(request));
+    public ResponseEntity<IncomeCategoryResponse> createIncomeCategory(@RequestBody IncomeCategoryRequest request,
+                                                                       @Parameter(hidden = true) @RequestHeader("X-User-Id") String activeUserId) {
+        return ResponseEntity.ok(service.saveIncomeCategory(request, activeUserId));
     }
 }
