# expenses-service/src/main/java/pl/tkaczyk/expensesservice/model/ExpenseCategory.java
@@ -21,7 +21,8 @@ public class ExpenseCategory {
     @GeneratedValue
     private Long id;
     private String name;
-    private Long createdByUser;
+    private Long createdByUserId;
+
     @ElementCollection
     private Set<Long> sharedWithUsers;
 
