# expenses-service/src/main/java/pl/tkaczyk/expensesservice/model/dto/IncomeCategoryResponse.java
@@ -5,6 +5,7 @@ import lombok.Builder;
 @Builder
 public record IncomeCategoryResponse(
         Long id,
-        String name
+        String name,
+        Long createdByUserId
 ) {
 }
